--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,10 +1,9 @@
 .container-outer {
   --outer-container-column: 8.5vw;
-  --min: calc(23.4375rem - 2 * (var(--outer-container-column))); //375px - 2 x outer-column-width = min width of content column
   max-width: 90rem; //1440px
   margin: 0 auto;
   display: grid;
-  grid-template-columns: [main-start] var(--outer-container-column) [content-start] minmax(var(--min), 69.375rem) [content-end] var(--outer-container-column) [main-end];
+  grid-template-columns: [main-start] var(--outer-container-column) [content-start] minmax(19.4385rem, 69.375rem) [content-end] var(--outer-container-column) [main-end];
 
   > * {
     grid-column-start: content-start;
