--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7282,6 +7282,11 @@ Usage: codyhouse.co/license
 :root {
   --nav-bar-height: 6rem; }
 
+.navigation {
+  background-color: var(--color-white);
+  position: fixed;
+  z-index: var(--zindex-fixed-element); }
+
 .nav-bar {
   height: var(--nav-bar-height);
   background: var(--color-white);
