--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -2,6 +2,12 @@
  --nav-bar-height: 6rem;
 }
 
+.navigation {
+  background-color: var(--color-white);
+  position: fixed;
+  z-index: var(--zindex-fixed-element);
+}
+
 .nav-bar {
   height: var(--nav-bar-height);
   background: var(--color-white);
@@ -74,6 +80,10 @@
 
   :root {
     --nav-bar-height: 9.5rem;
+  }
+
+  .navigation {
+    position: static;
   }
 
   .nav-bar,
