--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7286,20 +7286,18 @@ Usage: codyhouse.co/license
   background-color: var(--color-white);
   position: fixed;
   width: 100%;
-  z-index: var(--zindex-popover); }
+  z-index: var(--zindex-fixed-element); }
   .navigation .overlay {
-    margin-top: var(--nav-bar-height);
+    top: var(--nav-bar-height);
     opacity: 0;
     visibility: hidden;
-    z-index: var(--zindex-popover); }
+    z-index: -1; }
 
 .nav-bar {
   height: var(--nav-bar-height);
-  background: var(--color-white);
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  z-index: var(--zindex-fixed-element); }
+  justify-content: space-between; }
   .nav-bar__logo {
     margin-right: 5.875rem;
     height: 32px; }
@@ -7376,14 +7374,11 @@ Usage: codyhouse.co/license
 @media (min-width: 48rem) {
   :root {
     --nav-bar-height: 9.5rem; }
-  .navigation {
-    position: static; }
-  .nav-bar,
+  .navigation,
   .nav {
-    position: static; }
+    position: initial; }
   .nav-bar {
-    justify-content: start;
-    padding: 0; }
+    justify-content: start; }
     .nav-bar__logo {
       height: 40px; }
   .nav {
