--- a/main/assets/css/components/_footer.scss
+++ b/main/assets/css/components/_footer.scss
@@ -1,4 +1,20 @@
 .footer {
   text-align: center;
+
+  &__logo {
+    display: inline-block;
+    padding: 48px 31px;
+    background: var(--color-primary);
+    img {
+      filter: invert(100%) sepia(0%) saturate(13%) hue-rotate(225deg) brightness(103%) contrast(103%);
+    }
+  }
+
+
+  @include breakpoint(md) {
+    &__logo {
+      padding: 80px 51px;
+    }
+  }
 }
 
