--- a/main/assets/css/components/_footer.scss
+++ b/main/assets/css/components/_footer.scss
@@ -1,13 +1,29 @@
 .footer {
   text-align: center;
-
+  margin-top: 36px;
   &__logo {
     display: inline-block;
     padding: 48px 31px;
+    --logo-size: 120px;
+    max-width: var(--logo-size);
+    max-height: var(--logo-size);
     background: var(--color-primary);
+    margin-top: -50%;
     img {
       filter: invert(100%) sepia(0%) saturate(13%) hue-rotate(225deg) brightness(103%) contrast(103%);
     }
+  }
+
+  &__nav {
+    --nav-spacing: 32px;
+    margin: var(--nav-spacing) 0;
+    display: grid;
+    justify-items: center;
+    gap: var(--nav-spacing);
+  }
+
+  .btn {
+    margin-bottom: 48px;
   }
 
 
