complete coding of desktop footer

--- a/main/assets/css/components/_footer.scss
+++ b/main/assets/css/components/_footer.scss
@@ -2,6 +2,7 @@
   text-align: center;
   margin-top: 36px;
   background: var(--color-black-lighter);
+  position: relative;
 
   &__logo {
     display: inline-block;
@@ -29,11 +30,13 @@
   }
 
   @include breakpoint(sm) {
-    max-width: 80vw;
-    display: grid;
-    grid-template-columns: auto 1fr;
-
     background: initial;
+
+    &__container {
+      max-width: MAX(85vw, 612px);
+      display: grid;
+      grid-template-columns: auto 1fr;
+    }
 
     &__nav {
       margin: 0;
@@ -43,7 +46,6 @@
       align-items: center;
       justify-content: start;
       padding-left: 40px;
-
     }
 
     &__logo {
@@ -59,7 +61,12 @@
   }
 
   @include breakpoint(md) {
+    &__container {
+      max-width: MIN(65vw,984px);;
+    }
+  }
 
+  @include breakpoint(lg) {
 
     &__logo {
       --logo-size:200px;
