--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7289,12 +7289,15 @@ Usage: codyhouse.co/license
   border-top: 1px solid hsla(var(--color-contrast-higher-h), var(--color-contrast-higher-s), var(--color-contrast-higher-l), 0.15); }
 
 .footer {
-  text-align: center;
   margin-top: 2.25rem;
   position: relative; }
   .footer__container {
-    padding-bottom: 4rem;
-    background: var(--color-black-lighter); }
+    --nav-spacing: 2rem;
+    padding-bottom: 3rem;
+    background: var(--color-black-lighter);
+    display: grid;
+    place-items: center;
+    gap: var(--nav-spacing); }
   .footer__logo {
     display: inline-block;
     padding: 3rem 2rem;
@@ -7302,46 +7305,37 @@ Usage: codyhouse.co/license
     max-width: var(--logo-size);
     max-height: var(--logo-size);
     background: var(--color-primary);
-    margin-top: -50%; }
+    margin-top: calc(-1 * var(--logo-size)/2); }
     .footer__logo img {
       filter: invert(100%) sepia(0%) saturate(13%) hue-rotate(225deg) brightness(103%) contrast(103%); }
   .footer__nav {
-    --nav-spacing: 2rem;
     display: grid;
-    justify-items: center;
-    gap: var(--nav-spacing);
-    margin: var(--nav-spacing) 0; }
+    place-items: center;
+    gap: var(--nav-spacing); }
   @media (min-width: 48rem) {
-    .footer {
-      background: initial; }
-      .footer__container {
-        padding-bottom: initial;
-        max-width: MAX(85vw, 612px);
-        display: grid;
-        grid-template-columns: auto 1fr; }
-      .footer__nav {
-        margin: 0;
-        grid-template-columns: repeat(3, auto);
-        -moz-column-gap: 56px;
-             column-gap: 56px;
-        align-items: center;
-        justify-content: start;
-        padding-left: 40px; }
-      .footer__logo {
-        margin-top: initial; }
-      .footer .btn {
-        align-self: center;
-        position: absolute;
-        right: 0; } }
+    .footer__container {
+      padding-bottom: initial;
+      max-width: MAX(85vw, 612px);
+      grid-template-columns: auto 1fr;
+      justify-items: start; }
+    .footer__nav {
+      margin: 0;
+      grid-auto-flow: column;
+      gap: 3.5rem; }
+    .footer__logo {
+      margin-top: initial; }
+    .footer .btn {
+      position: absolute;
+      right: 0; } }
   @media (min-width: 64rem) {
     .footer__container {
-      max-width: MIN(65vw, 984px); } }
+      max-width: MIN(65vw, 164rem); } }
   @media (min-width: 80rem) {
+    .footer__container {
+      gap: 5.375rem; }
     .footer__logo {
-      --logo-size:200px;
-      padding: 80px 50px; }
-    .footer__nav {
-      padding-left: 85px; } }
+      --logo-size: 12.5rem;
+      padding: 5rem 3rem; } }
 
 :root {
   --nav-bar-height: 6rem; }
